# snips

./: BUGS  COPYRIGHT  Configure  INSTALL  Makefile.am  Makefile.deploy  Makefile.dist  Makefile.head  Makefile.mid  Makefile.tail  README  README.CVS  README.DATABASES  README.MYSQL  README.NOCOL  README.ORACLE  README.RRD  TODO  snips.conf
autoconf/: README  acconfig.h  config.h  config.h.in  configure.in  mkinstalldirs
cmu-snmp/: HOST  README.VIKAS  mib-v2.txt  strip-mib.pl
cmu-snmp/snmp/: BuildingAtCMU  Makefile.in  SMakefile  asn1.c  asn1.h  coexistance.c  configure.in  libsnmp.dsp  libsnmp.h  mib.c  mib.h  mibii.c  mibii.h  mini-client.c  mini-client.h  new-parse.c  options.h  parse.c  parse.h  reg-entry.reg  snmp-internal.h  snmp-man.pl  snmp-mib.h  snmp.3  snmp.h  snmp_api.3  snmp_api.c  snmp_api.h  snmp_api_error.c  snmp_api_error.h  snmp_api_errors.3  snmp_api_util.c  snmp_api_util.h  snmp_client.3  snmp_client.c  snmp_client.h  snmp_coexist.h  snmp_coexistance.3  snmp_compat.h  snmp_dump.c  (+28 more)
cmu-snmp/snmpapps/: BuildingAtCMU  INSTALL  Makefile.in  README  README.Win32  ReleaseNotes.txt  SMakefile  TODO  VERSION  acconfig.h  blank-manpage.man  build-snmpapps.sh  cmusnmp.dsw  config.h.in  configure  configure.in  exclude-in-tar  log.i386_linux2  log.sun4x_56  make-manpages.pl  options.h  snmpdelta.c  snmpdelta.man  snmpget.c  snmpget.dsp  snmpget.man  snmpgetnext.c  snmpgetnext.dsp  snmpgetnext.man  snmpset.c  snmpstatus.c  snmpstatus.dsp  snmpstatus.man  snmptest.c  snmptest.man  snmptranslate.c  snmptranslate.dsp  snmptranslate.man  snmptrap.c  snmptrap.dsp  (+12 more)
contrib/: README  pm3dmmon  pm3dmmon-confg  pm3t1e1mon  pm3t1e1mon-confg  xntpdmon
contrib/hostmon/: Hostmon.pm  Nocol.COPYRIGHT  README  hostmond  inetd.conf  services  udpcat  udpcli  xinetd.conf
contrib/php/: dump_datafile.php
contrib/portman_ssl/: Mail.msg  README  main.c.patch  portmon.c.patch  portmon.h.patch
docs/: bugs.txt  copyright.txt  design.html  faq.html  index.html  install.txt  opsguide.html  release.html
docs/sample1/: index.html
docs/sample1/rrd-images/: index.html
include/: daemon.h  event_utils.h  eventlog.h  ndaemon.h  netmisc.h  nsmon.h  ntpmon.h  osdefs.h  pingmon.h  portmon.h  radiusmon.h  snips.h  snips_funcs.h  snips_main.h  snipslogd.h  snipstv.h  tpmon.h  trapmon.h  version.h
lib/: DEVNOTES  Makefile.am  Makefile.mid  bsdsignal.c  daemon.c  event_utils.c  eventlog.c  getdate.y  netmisc.c  odbc.ini  odbc_api.c  oracle_api.c  putenv.c  rrd_funcs.c  snips_funcs.c  snips_json.c  snips_main.c  strfuncs.c
man/: Makefile.am  Makefile.mid  README  etherload.8  multiping.8  nsmon.8  ntpmon.8  pingmon.8  portmon.8  prologue.man  radiusmon.8  snips-perl.3  snips-utility.8  snips.8  snipslogd.8  snipstv.1  tksnips.1  tpmon.8  trapmon.8
nsmon/: DEVNOTES  Makefile.am  Makefile.mid  main.c  nsmon-confg  nsmon-local.h  nsmon.c
ntpmon/: Makefile.am  Makefile.mid  main.c  ntpmon-confg  ntpmon.c
perl-module/: Changes  MANIFEST  Makefile.PL  README  SNIPS.pm  SNIPS.xs  benchmark.pl  test.pl  typemap
perl-monitors/: DEVNOTES  Makefile.am  Makefile.mid  README  apc-info  apcmon  apcmon-confg  armon  armon-confg  bgpmon  bgpmon-confg  bpmon  bpmon-confg  ciscomon  ciscomon-confg  hostmon  hostmon-collector  hostmon-confg  mkarmon  mknrmon  modemmon  modemmon-confg  novellmon  novellmon-confg  nrmon  nrmon-confg  rcisco  smbmon  smbmon-confg  snipsperl.conf  snmpgeneric  snmpgeneric-confg  snmpgeneric2  snmpgeneric2-confg  snmpmon  snmpmon-client-confg  snmpmon-collector  snmpmon-confg  sqlmon  sqlmon-confg  (+5 more)
perl-monitors/hostmon-osclients/: hostmon-client  hostmon-client.aix  hostmon-client.bsdi  hostmon-client.freebsd  hostmon-client.hpux  hostmon-client.irix5  hostmon-client.irix6  hostmon-client.linux  hostmon-client.nt  hostmon-client.osf1  hostmon-client.solaris2  hostmon-client.sunos4  hostmon-client.ultrix  newsys.sh
pingmon/: DEVNOTES  Makefile.am  Makefile.mid  README  ippingmon-confg  main.c  pingmon.c  rpcpingmon-confg
pingmon/multiping/: Makefile.am  Makefile.mid  ip.h  ip_icmp.h  multiping.c  multiping.h  multiping6.c  ping-freebsd.c
pingmon/rpcping/: Makefile.am  Makefile.mid  README  rpcping.c
portmon/: Makefile.am  Makefile.mid  main.c  portmon-confg  portmon-local.h  portmon.c
radiusmon/: Makefile.am  Makefile.mid  main.c  md5-local.h  md5.c  md5.h  radiusmon-confg  radiusmon.c
snipslog/: DEVNOTES  Makefile.am  Makefile.mid  snipslogd-confg  snipslogd.c  snipslogtest.c
snipstv/: DEVNOTES  Makefile.am  Makefile.mid  create_subwins.c  create_subwins.h  do_filter.c  do_filter.h  help_page.c  help_page.h  init.c  init.h  main.c  main.h  parse_user_input.c  parse_user_input.h  snipstv-help  update_eventwin.c  update_msgtitle.c  update_msgtitle.h  update_msgwin.c  update_promptwin.c  update_title.c
snipsweb/: DEVNOTES  Makefile.am  Makefile.mid  README.snipsweb  default  genweb-filter.cgi  genweb.cgi  genweb.pl  rrdgraph.cgi  snipsweb-confg  snipsweb.cgi  updates  webusers
tksnips/: DEVNOTES  Makefile.am  Makefile.mid  README  ndaemon.c  tkSnips.tix
tpmon/: Makefile.am  Makefile.mid  main.c  tpmon-confg  tpmon.c  tptest.1  tptest.c  tptest.h
trapmon/: DEVNOTES  Makefile.am  Makefile.mid  snips_specific.c  snips_specific.h  trapmon-local.h  trapmon.c
utility/: Makefile.am  Makefile.mid  beep_oncall  crontab.snips  display_snips_datafile.c  docrypt.pl  eventselect.c  keepalive_monitors.pl  leapdates.pl  logmaint.pl  logstats.pl  myinstall  notifier-confg  notifier.pl  snipsprog.init  snmpconf.pl
